XW-5038: fix spacing

--- a/style-guide/styles/wds-components/_notifications.scss
+++ b/style-guide/styles/wds-components/_notifications.scss
@@ -165,6 +165,8 @@
 
 		&__header {
 			font-weight: bold;
+			font-size: $wds-typescale-size-minus-1;
+			margin-bottom: 6px;
 		}
 	}
 }
