--- a/style-guide/styles/wds-components/global-navigation/_user-modal.scss
+++ b/style-guide/styles/wds-components/global-navigation/_user-modal.scss
@@ -21,7 +21,6 @@
 		&__notifications-wrapper {
 			display: flex;
 			flex-direction: column;
-			margin-top: 24px;
 			margin-bottom: 92px;
 		}
 
